--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <link rel="stylesheet"  href="button.css">
 </head>
   <body>
-    <a href="day-1.html" target="_self">
-      <button class="button1">day-1</button> 
-    </a>
-  
-    <a href="https://instagram.com/" target="_self">
-      <button class="button2">Instagram </button>
-    </a>
+    <div class="container">
+          <div class="div1">
+            <a href="https://alif32126.github.io/100-days.challenge/" terget="self">day-1</a>
+          </div>
+          <div class="div1">
+            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+          </div>
+          <div class="div1">
+            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+          </div>
+          <div class="div1">
+            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+          </div>
+          <div class="div1">
+            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+          </div>
+    </div>
   </body>
 </html>
