--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>learn html</title>
-  <link rel="stylesheet"  href="button.css">
+  <link rel="stylesheet"  href="index.css">
 </head>
   <body>
     <div class="container">
