--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <body>
     <div class="container">
           <div class="div1">
-            <a href="https://alif32126.github.io/100-days.challenge/" terget="self">day-1</a>
+            <a href="day-1.html" terget="self">day-1</a>
           </div>
           <div class="div1">
-            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+            <a href="">day-2</a>
           </div>
           <div class="div1">
-            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+            <a href="">day-3</a>
           </div>
           <div class="div1">
-            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+            <a href="">day-4</a>
           </div>
           <div class="div1">
-            <a href="https://alif32126.github.io/100-days.challenge/">day-1</a>
+            <a href="">day-5</a>
           </div>
     </div>
   </body>
