--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <title>learn html</title>
-  <link rel="stylesheet"  href="front.css">
+  <title>100 days challenge </title>
+  <link rel="stylesheet"  href="home-page.css">
 </head>
   <body>
     <div class="container">
