--- a/day-2.html
+++ b/day-2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hello, World!</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="day-2.css" />
   </head>
   <body>
       <div class="container">
@@ -14,6 +14,6 @@
           </div>
         </div>
       </div>
-      <script src="script.js"></script>
+      <script src="day-2.js"></script>
   </body>
 </html>
