--- a/index.html
+++ b/index.html
@@ -10,16 +10,37 @@
             <a href="day-1.html" terget="self">day-1</a>
           </div>
           <div class="div1">
-            <a href="">day-2</a>
+            <a href="day-2.html">day-2</a>
           </div>
           <div class="div1">
-            <a href="">day-3</a>
+            <a href="day-3.html">day-3</a>
           </div>
           <div class="div1">
-            <a href="">day-4</a>
+            <a href="day-4.html">day-4</a>
           </div>
           <div class="div1">
-            <a href="">day-5</a>
+            <a href="day-5.html">day-5</a>
+          </div>
+          <div class="div1">
+            <a href="day-6.html">day-6</a>
+          </div>
+          <div class="div1">
+            <a href="day-7.html">day-7</a>
+          </div>
+          <div class="div1">
+            <a href="day-8.html">day-8</a>
+          </div>
+          <div class="div1">
+            <a href="day-9.html">day-9</a>
+          </div>
+          <div class="div1">
+            <a href="day-10.html">day-10</a>
+          </div>
+          <div class="div1">
+            <a href="day-11.html">day-11</a>
+          </div>
+         <div class="div1">
+            <a href="day-12.html">day-12</a>
           </div>
     </div>
   </body>
