--- a/day-3.html
+++ b/day-3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hello, World!</title>
-    
+    <link rel="stylesheet" href="day-3.css">
   </head>
   <body>
       <div class="container">
